[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
moka = { version = "0.12.7", features = ["future"] }
specta = { version = "1.0.5", features = ["typescript"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
hashbrown = "0.14.5"
imstr = "0.2.0"
